<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="ts"
            type="ru.soldatenko.habr3.ticket.TicketSubsystem" />

    </data>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="ru.soldatenko.habr3.TicketActivity">

        <TextView
            android:id="@+id/ticketNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticketNumberLabel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="@{ts.ticket == null ? View.GONE: View.VISIBLE}" />

        <TextView
            android:id="@+id/ticketNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/ticketNumberLabel"
            android:layout_toRightOf="@+id/ticketNumberLabel"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@{ts.ticket.number}"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="@{ts.ticket == null ? View.GONE: View.VISIBLE}"
            tools:text="A59" />

        <TextView
            android:id="@+id/positionInQueueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ticketNumberLabel"
            android:text="@string/positionInQueueLabel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="@{ts.ticket == null ? View.GONE: View.VISIBLE}" />

        <TextView
            android:id="@+id/positionInQueueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/positionInQueueLabel"
            android:layout_toEndOf="@+id/positionInQueueLabel"
            android:layout_toRightOf="@+id/positionInQueueLabel"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@{String.valueOf(ts.ticket.positionInQueue)}"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="@{ts.ticket == null ? View.GONE: View.VISIBLE}"
            tools:text="7" />

        <TextView
            android:id="@+id/tellerNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/positionInQueueLabel"
            android:text="@string/tellerNumberLabel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="@{ts.ticket.tellerNumber == null ? View.GONE: View.VISIBLE}" />

        <TextView
            android:id="@+id/tellerNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/positionInQueueLabel"
            android:layout_toEndOf="@+id/tellerNumberLabel"
            android:layout_toRightOf="@+id/tellerNumberLabel"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@{ts.ticket.tellerNumber}"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="@{ts.ticket.tellerNumber == null ? View.GONE: View.VISIBLE}"
            tools:text="2" />

        <Button
            android:id="@+id/createTicketButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="onCreateTicketClick"
            android:text="@string/createTicketButtonLabel" />

        <Button
            android:id="@+id/removeTicketButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tellerNumberLabel"
            android:enabled="@{ts.ticket != null}"
            android:onClick="onRemoveTicketClick"
            android:text="@string/removeTicketLabel" />

    </RelativeLayout>
</layout>